# book_keeper

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: infrastructure_cdk_deploy.yml  pytest.yml  python-package.yml
infrastructure/: infrastructure.tf  main.tf  variables.tf
infrastructure/modules/athena/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iam/: main.tf
infrastructure/modules/s3_buckets/: main.tf  outputs.tf  variables.tf
misc/: cp_all_books.sh  s3_to_postgres_migrate.py
src/: 1_📈_Overview.py  1_📈_Statistics.py  Welcome.py  app.py  athena_queries.py  example_data.py  test_setup.py  utils.py
src/auth/: auth_config.yaml
src/pages/: 2_➕_Add_book.py  3_☝️_Update_book.py  4_➖_Delete_book.py  5_👓_Search_book.py  6_⌛_Filter_books.py  6_👶_Profile.py  7_📪_Contact.py
src/tests/: __init__.py  conftest.py  dummy_test.py  test_auth_config.yaml  test_authio.py  test_bk_dataops.py  test_bk_io.py
src/tests/test_data/: __init__.py
src/utils/: __init__.py  auth.py  bk_data_ops.py  bk_io.py  example_data.py  ui_component.py  utils.py
test_infrastructure/: cdk.json  package-lock.json  package.json
test_infrastructure/lib/: test_infrastructure-stack.ts
test_infrastructure/test/: test_infrastructure.test.ts
